cluster/monitoring/ntfy/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: ntfy
    app.kubernetes.io/version: v2.28.0
  name: ntfy
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ntfy
  template:
    metadata:
      annotations:
        homelab/ntfy-start-hash: dc2a111e98c6feb0
      labels:
        app.kubernetes.io/name: ntfy
        app.kubernetes.io/version: v2.28.0
    spec:
      automountServiceAccountToken: false
      enableServiceLinks: false
      containers:
      - command:
        - /bin/sh
        - /scripts/ntfy-start.sh
        image: binwiederhier/ntfy:v2.28.0
        name: ntfy
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 9090
          name: metrics
        volumeMounts:
        - mountPath: /scripts
          name: scripts-volume
          readOnly: true
        resources:
          requests:
            cpu: 10m
            memory: 32Mi
          limits:
            cpu: 500m
            memory: 256Mi
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsUser: 65534
          runAsGroup: 65534
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
        readinessProbe:
          httpGet:
            path: /v1/health
            port: 8080
          periodSeconds: 10
      volumes:
      - name: ntfy-auth-secret-guard-volume
        secret:
          secretName: ntfy-auth-secret
      - name: ntfy-db-secret-guard-volume
        secret:
          secretName: ntfy-db-secret
      - name: scripts-volume
        configMap:
          name: ntfy-scripts
      securityContext:
        seccompProfile:
          type: RuntimeDefault
