cluster/monitoring/ntfy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: ntfy
    app.kubernetes.io/version: v2.28.0
  name: ntfy
spec:
  selector:
    app.kubernetes.io/name: ntfy
  ports:
  - name: http
    port: 8080
    targetPort: 8080
